<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtSetName"
            android:hint="@string/editText_setUsername"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />
        <EditText
            android:id="@+id/txtSetWasOnline"
            android:hint="@string/editText_setWasOnline"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />
        <EditText
            android:id="@+id/txtSetHobby"
            android:hint="@string/editText_setHobby"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />
        <EditText
            android:id="@+id/txtSetEmail"
            android:hint="@string/editText_setEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />
        <EditText
            android:id="@+id/txtSetStatus"
            android:hint="@string/editText_setStatus"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <Button
            android:id="@+id/btnSaveUser"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/btnSaveNewUser" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>